修改 hugo.toml 配置

--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,7 @@
 # 站点配置
 
 baseURL = "https://example.com/"
-title = "Hugo 主题 MemE"
+title = "天涯墨客"
 languageCode = "zh-CN"
 hasCJKLanguage = true
 # 版权信息（支持 Markdown）
@@ -96,7 +96,7 @@ uglyURLs = false
 # 作者信息
 [author]
     # 名字
-    name = "reuixiy"
+    name = "grimstroker"
     # 邮箱
     email = "reuixiy@gmail.com"
     # 座右铭或简介
