--- a/hugo.toml
+++ b/hugo.toml
@@ -695,7 +695,7 @@ uglyURLs = false
     trackingCodeType = "gtag"
     # 说明：gtag 或 analytics
 
-    trackingID = "UA-186120947-1"
+    trackingID = "G-5DZN4XN7ZJ"
 
 
     ######################################
