--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 ##########################################
 # 站点配置
 
-baseURL = "https://example.com/"
+baseURL = "https://grimstroker.github.io/"
 title = "天涯墨客"
 languageCode = "zh-CN"
 hasCJKLanguage = true
@@ -22,7 +22,7 @@ defaultContentLanguageInSubdir = false
 pluralizeListTitles = false
 
 # 摘要的字数限制
-summaryLength = 42
+summaryLength = 200
 
 # 是否开启 GitHub 风格的 Emoji 书写方式
 enableEmoji = false
@@ -348,7 +348,7 @@ uglyURLs = false
     #      Open Graph、Atom、RSS
 
     # 站点的创建时间
-    siteCreatedTime = "1969-07-20T20:17:43+00:00"
+    siteCreatedTime = "2023-07-20T20:17:43+00:00"
     # 注意：请保持此格式，更改数字
 
     # 站点的推特帐号
